@@ -6,6 +6,7 @@
  * Improved ctrl + f speed significantly
  * Made nydus launch pad bullets not render (the servers till sends tons of packets so it still kills wifi but oh well)
  * Fixed a problem with navigation that could cause it to not work correctly when playing the flood gamemode
+ * Added !distance to change the distance multiplier of the assist command, the default is 1.5
 
 # Version 7.3.0
  * Fixed an issue in buildpath where !builder belts and !builder drill would only partially upgrade each building
